<resources>
    <string name="app_name">Melon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <string name="login_in">登录</string>
    <string name="my_status">我的状态</string>
    <string name="take_picture">拍照</string>
    <string name="view_my_pictures">选择图片</string>
    <string name="my_settings">设置</string>
    <string name="my_communicate">Communicate</string>
    <string name="share">分享</string>
    <string name="send">发送</string>
    <string name="help_to_use">帮助</string>
</resources>
